# rutes

./: Cargo.toml  Readme.md
src/: console.rs  main.rs  start_rutes.rs
src/core/: mod.rs
src/core/error/: mod.rs
src/core/executor/: messages.rs  mod.rs
src/core/pipelines/: mod.rs  parser.rs  pipeline.pest  pipeline.rs
src/core/task/: mod.rs
src/core/user/: mod.rs
src/web/: mod.rs  utils.rs
src/web/rutes/: common.rs  errors.rs  forms.rs  mod.rs  pipelines.rs  task.rs
src/web/templates/: base.html  body.html
src/web/templates/errors/: 404.html  500.html
src/web/templates/pipelines/: configure.html  execute.html  new_pipeline.html  pipeline.html  pipelines.html  update.html
src/web/templates/task/: live_logs.html  logs.html  scheduler.html  task.html
