[package]
name = "rutes"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.15.1", features = ["v4", "serde"] }
tera = "1"
actix-web = "4"
env_logger = "0.10"
log = "0.4.20"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
actix-ws = "0.3.0"
futures-util = "0.3.31"
tokio = "1.44.0"
